adicionando função para mostrar itens especificos

--- a/bolos.html
+++ b/bolos.html
@@ -74,6 +74,7 @@
         <section id="categorias">
             <h2 class="categorias__titulo" data-animacao="left">Selecione a categoria</h2>
             <div class="categorias__div" data-animacao="left">
+                <button class="categorias__botao" data-todos>Todos</button>
                 <button class="categorias__botao" data-opcao="um" >Bolos Brancos</button>
                 <button class="categorias__botao" data-opcao="dois" >Bolos de Chocolate</button>
             </div>
@@ -87,28 +88,28 @@
                     <ficaption class="item__nome">Ninho duplo com Morango</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a href="paginas-itens/bolos/bolo-red-velvet.html" class="item" data-categoria="dois">
+                <a href="paginas-itens/bolos/bolo-red-velvet.html" class="item" data-categoria="um">
                     <figure class="item__figure">
                         <img src="assets/imagens/bolo-red-velvet.jpg" class="item__imagem">
                     </figure>
                     <ficaption class="item__nome">Bolo Red Velvet com Ninho</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a href="paginas-itens/bolos/bolo-floresta-negra.html" class="item" data-categoria="">
+                <a href="paginas-itens/bolos/bolo-floresta-negra.html" class="item" data-categoria="dois">
                     <figure class="item__figure">
                         <img src="assets/imagens/bolo-floresta-negra.jpg" class="item__imagem">
                     </figure>
                     <ficaption class="item__nome">Bolo Floresta Negra</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a href="paginas-itens/bolos/bolo-compadre.html" class="item" data-categoria="">
+                <a href="paginas-itens/bolos/bolo-compadre.html" class="item" data-categoria="um">
                     <figure class="item__figure">
                         <img src="assets/imagens/bolo-compadre.png" class="item__imagem">
                     </figure>
                     <ficaption class="item__nome">Bolo Compadre</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a href="paginas-itens/bolos/bolo-prestigio.html" class="item" data-categoria="">
+                <a href="paginas-itens/bolos/bolo-prestigio.html" class="item" data-categoria="dois">
                     <figure class="item__figure">
                         <img src="assets/imagens/bolo-prestigio.jpg" class="item__imagem">
                     </figure>
