--- a/brigadeiros.html
+++ b/brigadeiros.html
@@ -127,5 +127,6 @@
 
     <script src="assets/js/menu.js"></script>
     <script src="assets/js/animacao.js"></script>
+    <script src="assets/js/produtos.js"></script>
 </body>
 </html>
