--- a/loja.html
+++ b/loja.html
@@ -58,6 +58,15 @@
         </nav>
     </header>
 
+    <main class="conteudo">
+        <section id="banner">
+            <img src="assets/imagens/banner-loja.jpg" class="banner__imagem" data-animacao="bottom">
+            <div class="banner__conteudo" data-animacao="bottom">
+                <h1 class="banner__titulo">Saiba onde nos Encontrar</h1>
+            </div>
+        </section>
+    </main>
+
     <footer>
         <img src="assets/imagens/logo.png" alt="Quindim de Ouro logo">
         <div class="footer__conteudo">
