estilizando página loja

--- a/loja.html
+++ b/loja.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/banner.css">
     <link rel="stylesheet" href="assets/css/corpo.css">
+    <link rel="stylesheet" href="assets/css/loja.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <title>Quindim de Ouro - Loja</title>
 </head>
@@ -60,10 +61,24 @@
 
     <main class="conteudo">
         <section id="banner">
-            <img src="assets/imagens/banner-loja.jpg" class="banner__imagem" data-animacao="bottom">
+            <img src="assets/imagens/entrada.jpeg" class="banner__imagem" data-animacao="bottom">
             <div class="banner__conteudo" data-animacao="bottom">
-                <h1 class="banner__titulo">Saiba onde nos Encontrar</h1>
+                <h1 class="banner__titulo">Saiba aonde nos Encontrar</h1>
             </div>
+        </section>
+        <section class="introducao">
+            <div class="introducao__container">
+                <div class="container__texto" data-animacao="left">
+                    <p class="texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis distinctio, omnis esse blanditiis eaque veritatis odio sunt? Ipsum eos sapiente fugiat inventore magnam est magni odit maiores explicabo, perferendis animi.</p>
+                    <p class="texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis distinctio, omnis esse blanditiis eaque veritatis odio sunt? Ipsum eos sapiente fugiat inventore magnam est magni odit maiores explicabo, perferendis animi.</p>
+                </div>
+                <img class="container__imagem" src="assets/imagens/visao-fundo.jpeg" alt="Imagem do  projeto da loja" data-animacao="bottom">
+                
+            </div>
+        </section>
+        <section class="mapa">
+            <h2 class="mapa__titulo" data-animacao="left">Você pode nos enconstrar aqui!</h2>
+            <iframe class="mapa__iframe" src="https://www.google.com/maps/embed?pb=!3m2!1spt-BR!2sbr!4v1659889902343!5m2!1spt-BR!2sbr!6m8!1m7!1sB70MhLyMOwun4BfnPQYKEg!2m2!1d-23.66033076855706!2d-46.66964700765006!3f52.733748089401416!4f1.5617846140959415!5f0.7820865974627469"" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
 
