--- a/quindim-de-ouro.html
+++ b/quindim-de-ouro.html
@@ -61,7 +61,7 @@
 
     <main class="conteudo">
         <section id="banner">
-            <img src="assets/imagens/banner.jpg" alt="" class="banner__imagem" data-animacao="bottom">
+            <img src="assets/imagens/balcao.jpeg" alt="" class="banner__imagem" data-animacao="bottom">
             <div class="banner__conteudo" data-animacao="bottom">
                 <h1 class="banner__titulo">Quindim de Ouro</h1>
                 <h2 class="banner__descricao">Saiba quem somos!</h2>
