arrumando erro ortográfico.

--- a/loja.html
+++ b/loja.html
@@ -77,7 +77,7 @@
             </div>
         </section>
         <section class="mapa">
-            <h2 class="mapa__titulo" data-animacao="left">Você pode nos enconstrar aqui!</h2>
+            <h2 class="mapa__titulo" data-animacao="left">Você pode nos encontrar aqui!</h2>
             <iframe class="mapa__iframe" src="https://www.google.com/maps/embed?pb=!3m2!1spt-BR!2sbr!4v1659889902343!5m2!1spt-BR!2sbr!6m8!1m7!1sB70MhLyMOwun4BfnPQYKEg!2m2!1d-23.66033076855706!2d-46.66964700765006!3f52.733748089401416!4f1.5617846140959415!5f0.7820865974627469"" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
