adicionando outros itens

--- a/bolos.html
+++ b/bolos.html
@@ -104,7 +104,7 @@
                 </a>
                 <a href="paginas-itens/bolos/bolo-compadre.html" class="item" data-categoria="um">
                     <figure class="item__figure">
-                        <img src="assets/imagens/bolo-compadre.png" class="item__imagem">
+                        <img src="assets/imagens/bolo-compadre.jpg" class="item__imagem">
                     </figure>
                     <ficaption class="item__nome">Bolo Compadre</ficaption>
                     <button class="item__botao">Saiba Mais</button>
