--- a/brigadeiros.html
+++ b/brigadeiros.html
@@ -71,31 +71,33 @@
         <section id="categorias">
             <h2 class="categorias__titulo" data-animacao="left">Selecione a categoria</h2>
             <div class="categorias__div" data-animacao="left">
+                <button class="categorias__botao" data-todos>Todos</button>
                 <button class="categorias__botao" data-opcao="um">Tradicionais</button>
-                <button class="categorias__botao">Recheados</button>
-                <button class="categorias__botao">Blossoms</button>
+                <button class="categorias__botao" data-opcao="dois">Recheados</button>
+                <button class="categorias__botao" data-opcao="tres">Blossoms</button>
+                <button class="categorias__botao" data-opcao="quatro">Caixas</button>
             </div>
         </section>
         <section id="secao__produtos" data-animacao="bottom">
             <div class="produtos__container">
-                <a href="" class="item" data-categoria="">
+                <a href="./paginas-itens/brigadeiros/beijinho.html" class="item" data-categoria="um">
                     <figure class="item__figure">
-                        <img src="assets/imagens/" class="item__imagem">
+                        <img src="assets/imagens/beijinho.jpg" class="item__imagem">
                     </figure>
-                    <ficaption class="item__nome">Bolo Ninho duplo com Morango</ficaption>
+                    <ficaption class="item__nome">Beijinho</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a class="item" data-categoria="">
+                <a href="./paginas-itens/brigadeiros/tradicional-Blossom.html" class="item" data-categoria="tres">
                     <figure class="item__figure">
-                        <img src="assets/imagens/" class="item__imagem"></figure>
-                    <ficaption class="item__nome">Nome do item</ficaption>
+                        <img src="assets/imagens/tradicional-blossoms.jpg" class="item__imagem"></figure>
+                    <ficaption class="item__nome">Tradicional Blossom</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
-                <a class="item" data-categoria="">
+                <a href="./paginas-itens/brigadeiros/caixa-12-brigadeiros.html" class="item" data-categoria="quatro">
                     <figure class="item__figure">
-                        <img src="assets/imagens/" class="item__imagem">
+                        <img src="assets/imagens/caixa-12-brigadeiros.jpg" class="item__imagem">
                     </figure>
-                    <ficaption class="item__nome">Nome do item</ficaption>
+                    <ficaption class="item__nome">Caixa 12 Brigadeiros</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
                 <a class="item" data-categoria="">
