--- a/celebracoes.html
+++ b/celebracoes.html
@@ -72,17 +72,18 @@
         <section id="categorias">
             <h2 class="categorias__titulo" data-animacao="left">Selecione a categoria</h2>
             <div class="categorias__div" data-animacao="left">
-                <button class="categorias__botao" data-opcao="um">aaaaaaa</button>
+                <button class="categorias__botao" data-todos>Todos</button>
+                <button class="categorias__botao" data-opcao="um">Tortas</button>
                 <button class="categorias__botao">aaaaaaa</button>
             </div>
         </section>
         <section id="secao__produtos" data-animacao="bottom">
             <div class="produtos__container">
-                <a href="" class="item" data-categoria="">
+                <a href="./paginas-itens/celebracoes/banoffe.html" class="item" data-categoria="um">
                     <figure class="item__figure">
-                        <img src="assets/imagens/" class="item__imagem">
+                        <img src="assets/imagens/banoffe.jpg" class="item__imagem">
                     </figure>
-                    <ficaption class="item__nome">Bolo Ninho duplo com Morango</ficaption>
+                    <ficaption class="item__nome">Banoffe</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
                 <a class="item" data-categoria="">
