--- a/paginas-itens/celebracoes/banoffe.html
+++ b/paginas-itens/celebracoes/banoffe.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../../assets/css/item.css">
     <link rel="stylesheet" href="../../assets/css/footer.css">
 
-    <title>Quindim de Ouro - Bolo Compadre</title>
+    <title>Quindim de Ouro - Torta de Morango</title>
 </head>
 <body>
     <header class="cabecalho">
@@ -66,10 +66,10 @@
 
     <main>
         <div class="item__container">
-            <img src="../../assets/imagens/bolo-compadre.jpg" data-animacao="left" alt="Bolo ninho duplo com morango" class="conteudo__imagem">
+            <img src="../../assets/imagens/banoffe.jpg" data-animacao="left" alt="Bolo ninho duplo com morango" class="conteudo__imagem">
             <div class="container__conteudo" data-animacao="bottom">
-                <h1 class="conteudo__titulo">Bolo Compadre</h1>
-                <p class="conteudo__descricao">Massa de pão de ló bem fofinha, recheado com uma deliciosa compota de morango, mousse de leite ninho e um cremoso brigadeiro de ninho</p>
+                <h1 class="conteudo__titulo">Banoffe</h1>
+                <p class="conteudo__descricao">Uma camada de Biscoito Crocante, Doce de Leite Caseiro, Banana in natura e Chantyninho.</p>
 
                 <div class="container__pedir">
                     <h2 class="pedir__titulo">Clique para aproveitar agora</h2>
