--- a/sobremesas.html
+++ b/sobremesas.html
@@ -76,7 +76,7 @@
                 <button class="categorias__botao" data-opcao="um">Tortas</button>
                 <button class="categorias__botao" data-opcao="dois">Bombons</button>
                 <button class="categorias__botao" data-opcao="tres">Doces Quentes</button>
-                <button class="categorias__botao" data-opcao="quatro">brownies</button>
+                <button class="categorias__botao" data-opcao="quatro">Brownies</button>
             </div>
         </section>
         <section id="secao__produtos" data-animacao="bottom">
@@ -139,7 +139,21 @@
                     <figure class="item__figure">
                         <img src="assets/imagens/torta-de-morango.jpg" class="item__imagem">
                     </figure>
-                    <ficaption class="item__nome">Tora de Morango</ficaption>
+                    <ficaption class="item__nome">Torta de Morango</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a href="paginas-itens/sobremesas/torta-de-limao.html" class="item" data-categoria="um">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/torta-limao.jpg" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Torta de Limão</ficaption>
+                    <button class="item__botao">Saiba Mais</button>
+                </a>
+                <a href="paginas-itens/sobremesas/torta-de-limao.html" class="item" data-categoria="um">
+                    <figure class="item__figure">
+                        <img src="assets/imagens/torta-limao.jpg" class="item__imagem">
+                    </figure>
+                    <ficaption class="item__nome">Torta Holandesa</ficaption>
                     <button class="item__botao">Saiba Mais</button>
                 </a>
             </div>
