adicionando animacoes com css

--- a/index.html
+++ b/index.html
@@ -72,28 +72,28 @@
                           <a href="bolos.html" class="container__link">
                               <img src="assets/imagens/bolos-carrossel.jpg" alt="" class="container__imagem">
                               <h1 class="container__titulo">Bolos</h1>
-                              <p class="container__botao">Saiba Mais</p>                    
+                              <button class="container__botao">Saiba Mais</button>                    
                           </a>
                         </li>
                         <li class="splide__slide">
                           <a href="brigadeiros.html" class="container__link">
                               <img src="assets/imagens/brigadeiros.jpg" alt="" class="container__imagem">
                               <h1 class="container__titulo">Brigadeiros</h1>
-                              <p class="container__botao">Saiba Mais</p>
+                              <button class="container__botao">Saiba Mais</button>
                           </a>
                         </li>
                         <li class="splide__slide">
                           <a href="sobremesas.html" class="container__link">
                               <img src="assets/imagens/quindim.jpg" alt="" class="container__imagem">
                               <h1 class="container__titulo">Sobremesas</h1>
-                              <p class="container__botao">Saiba Mais</p>                    
+                              <button class="container__botao">Saiba Mais</button>                    
                           </a>
                         </li>
                         <li class="splide__slide">
                           <a href="celebracoes.html" class="container__link">
                               <img src="assets/imagens/calebracoes-carrossel.jpg" alt="" class="container__imagem">
                               <h1 class="container__titulo">Celebrações</h1>
-                              <p class="container__botao">Saiba Mais</p>
+                              <button class="container__botao">Saiba Mais</button>
                           </a>
                         </li>
   
