--- a/paginas-itens/sobremesas/coxinha-de-morango.html
+++ b/paginas-itens/sobremesas/coxinha-de-morango.html
@@ -67,7 +67,7 @@
     <main>
         <div class="item__container">
             <img src="../../assets/imagens/coxinha-de-morango.jpg" data-animacao="left" alt="Bolo ninho duplo com morango" class="conteudo__imagem">
-            <div class="container__conteudo" data-animacao="bottom">
+            <div class="container__conteudo" data-animacao="right">
                 <h1 class="conteudo__titulo">Coxinha de Morango</h1>
                 <p class="conteudo__descricao">Morango coberto com delicioso brigadeiro ao leite.</p>
 
