--- a/paginas-itens/sobremesas/torta-de-limao.html
+++ b/paginas-itens/sobremesas/torta-de-limao.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../../assets/css/item.css">
     <link rel="stylesheet" href="../../assets/css/footer.css">
 
-    <title>Quindim de Ouro - Torta de Morango</title>
+    <title>Quindim de Ouro - Torta de Limão</title>
 </head>
 <body>
     <header class="cabecalho">
