--- a/index.html
+++ b/index.html
@@ -137,18 +137,17 @@
         splide.mount();
 
     </script>
-    <script src="https://unpkg.com/blip-chat-widget" type="text/javascript"></script>
+   <script src="https://unpkg.com/blip-chat-widget" type="text/javascript"></script>
     <script>
         (function () {
             window.onload = function () {
                 new BlipChat()
                     .withAppKey('cXVpbmRpbXJvdXRlcjE6MDMyM2Y5NzAtMTQxMy00Nzk0LWJiMmYtYjYxODY2ZmRkZDg2')
-                    .withButton({"color":"#0096fa","icon":""})
+                    .withButton({"color":"#f8ca0e","icon":"https://blipmediastore.blob.core.windows.net/public-medias/Media_1034789a-495c-453b-bbb0-c244d2f271ea"})
                     .withCustomCommonUrl('https://victor-laguna-wcwzv.chat.blip.ai/')
                     .build();
             }
         })();
-    </script>
-            
+    </script>  
 </body>
 </html>
